# mw-btc-swap

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: settings.json
grin-wallet/libwallet/src/: slate.rs
src/: bitcoin.rs  commands.rs  constants.rs  crypto.rs  enums.rs  grin.rs  main.rs  net.rs  settings.rs  swap.rs  util.rs
src/bitcoin/: bitcoin_core.rs  bitcoin_core_responses.rs  bitcoin_types.rs  btcroutines.rs
src/commands/: cmd_types.rs  mod.rs  parser.rs
src/commands/cmd_types/: accept.rs  cancel.rs  command.rs  execute.rs  import_btc.rs  import_grin.rs  init.rs  listen.rs  lock.rs  setup.rs
src/grin/: grin_core.rs  grin_core_responses.rs  grin_routines.rs  grin_tx.rs  grin_types.rs
src/net/: http.rs  tcp.rs
src/swap/: mod.rs  protocol.rs  slate.rs  swap_types.rs
tmp/: backup.txt  btccoin.txt  coin  commands.txt  sample-grin-tx.json  slate_tool  tx  tx.json  tx_verifier
video/: cnc.alc.prv.x1  cnc.bob.prv.x1  cnc.bob.pub.x1  exc.alc.prv.x2  exc.alc.pub.x2  exc.bob.prv.x2  stp.bob.prv.x1  stp.bob.pub.x1  x1.txt  x2.txt
