[package]
name = "mw-btc-swap"
version = "0.1.0"
authors = ["Jakob <jakobabfalter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
clap = "2.33"
bitcoin = {version = "0.25.2", features = ["rand"] }
rand = "0.6.5"
sha2 = "0.9.1"
hex = "0.4.2"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }