[package]
name = "mw-btc-swap"
version = "0.1.0"
authors = ["Jakob <jakobabfalter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
clap = "2.33"
bitcoin = {version = "0.25.2", features = ["rand"] }
rand = "0.6.5"
sha2 = "0.9.1"
hex = "0.4.2"
reqwest = { version = "0.10", features = ["json","blocking"] }
tokio = { version = "0.2", features = ["full"] }
grin_wallet_libwallet = "2.1.0"
grin_util = "2.1.0"
grin_core = "2.1.0"
#grin_core = { git = "https://github.com/mimblewimble/grin", tag = "v5.0.0-rc.2" }
#grin_wallet_libwallet = { git = "https://github.com/mimblewimble/grin-wallet", tag = "v5.0.0-rc.1"}
#grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v5.0.0-rc.1"}

[patch.crates-io]
grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }